traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:28: error: not found: value getMondeLargaeur
     } while (x == getMondeLargaeur() - 1)
                   ^