traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
var compt:Int = 0
var x:Int = 0
var y:Int = 0

override def run() {
  
 
  var posFin:Boolean = false
  
  while(posFin != true){
    avancer()
    
    if(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1){
      
      posFin = true;
    }
  }
}

  
def avancer(){
 do {
   	
    ecritMessage(compt)
    compt=compt+1;
    setPos(x,y)
    x = x+1;
   
 		} while (x == getMondeLargaeur() - 1)
  
  do {
    ecritMessage(compt)
    compt=compt+1;
    setPos(x,y)
    y=y+1;
    
  } while (x  == 0)
 }
  